# BLR_HCKTN_OPENENV_2026

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  hackathon_knowledge.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  start.sh  test_docker.sh
OSaaS/: API.md  index.html  package-lock.json  package.json  readMe.md  rl-viewer.html  viewer.html  vite.config.js
OSaaS/process_analizer/: convert.ipynb  main.ipynb  names.json  real.json  resultado_final.json
OSaaS/src/: App.jsx  global.css  rl-viewer-main.jsx  viewer-main.jsx
OSaaS/src/api/: APIBridgeMount.jsx  InstanceManager.jsx  OSApp.jsx  useAPIBridge.js
OSaaS/src/components/: DesktopIcon.jsx  ElementsPanel.jsx  HeaderBar.jsx  RecordingHUD.jsx  StartMenu.jsx  StatusMonitor.jsx  Taskbar.jsx
OSaaS/src/components/control/: ControlPanel.jsx
OSaaS/src/components/desktop/: VirtualDesktop.jsx
OSaaS/src/components/windows/: ExplorerApp.jsx  PythonInstallerApp.jsx  SystemRunnerApp.jsx  (+4 more)
OSaaS/src/debug/: EventLog.jsx  StateInspector.jsx
OSaaS/src/kernel/: OSContext.jsx  initialState.js  reducer.js
action_agent/: README.md  __init__.py  agent.py  config.py  event_processor.py  llm_client.py  main.py  omni_bridge.py
action_agent/examples/: sample_events.json
action_agent/tests/: test_agent.py
dom_agent/: README.md  agent_bc.pt  agent_rl.pt  env_server.py  inference.py  model.py  requirements.txt  train.py
dom_agent/recordings/: sample_trajectory_1.json
server/: __init__.py  app.py  environment.py  headless_os.py  initial_state.py  models.py  reducer.py  tasks.py
