[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "react-os"
version = "1.0.0"
description = "A simulated React OS environment for training GUI navigation agents via Reinforcement Learning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "pydantic==2.12.5",
    "requests==2.33.1",
    "openai==2.30.0",
    "httpx==0.28.1",
    "starlette==1.0.0",
    "anyio==4.13.0",
    "typing_extensions==4.15.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.openenv]
app = "server.app:app"
port = 8000
